# afroplug

./: .gitignore  CMakeLists.txt  README.md  icons_preview.html
.github/workflows/: build-macos.yml  build.yml
Installer/: distribution.xml  license.html  welcome.html
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: june-stability-log.md  stability-notes.md
packaging/: entitlements.plist
